Reload Reloaded: Use ReloadMainResource even on recovering from offline

blink::WebFrameLoadType::Reload re-validates all resources, but
blink::WebFrameLoadType::ReloadMainResource only re-validates
the main document. Recently NavigationController was modified
to use ReloadMainResource instead of Reload.

When chrome is offline, NetErrorHelper monitors network state,
and reload a page when it gets online.
Since NetErrorHelper does not use NavigationController, but calls
WebFrame::reload() interface, it still uses traditional reload type,
Reload. Let replace it with ReloadMainResource as we did for reloads
through the NavigationController.

BUG=669580

Review-Url: https://codereview.chromium.org/2538423002
Cr-Commit-Position: refs/heads/master@{#435886}

Former-commit-id: e702f8d9772ebd56c5a75186841d98222861dae3