chrome/renderer/net/net_error_helper.cc
@@ -315,7 +315,7 @@ void NetErrorHelper::SendTrackingRequest(
 void NetErrorHelper::ReloadPage(bool bypass_cache) {
   render_frame()->GetWebFrame()->reload(
       bypass_cache ? blink::WebFrameLoadType::ReloadBypassingCache
-                   : blink::WebFrameLoadType::Reload);
+                   : blink::WebFrameLoadType::ReloadMainResource);
 }
 
 void NetErrorHelper::LoadPageFromCache(const GURL& page_url) {
